--- a/index.html
+++ b/index.html
@@ -15,28 +15,28 @@
     </div>
     <table>
         <tr>
-          <td id="cell1">kip</td>
-          <td id="cell2"><img src="afbeeldingen/kip.jpg" height="20%" width="60%"></td>
-          <td id="cell3">ei</td>
-          <td id="cell4"><img src="afbeeldingen/ei.jpg"height="20%" width="15%"></td>
+          <td id="cell1" height="50" width="70">kip</td>
+          <td id="cell2" ><img src="afbeeldingen/kip.jpg" height="20%" width="100%"></td>
+          <td id="cell3" height="50" width="70">ei</td>
+          <td id="cell4" ><img src="afbeeldingen/ei.jpg"height="130%" width="102%"></td>
         </tr>
         <tr>
-          <td id="cell5">Cell 5</td>
-          <td id="cell6">Cell 6</td>
-          <td id="cell7">Cell 7</td>
-          <td id="cell8">Cell 8</td>
+          <td id="cell5" height="50" width="70"></td>
+          <td id="cell6" height="50" width="70"></td>
+          <td id="cell7" height="50" width="70"></td>
+          <td id="cell8" height="50" width="70"></td>
         </tr>
         <tr>
-          <td id="cell9">Cell 9</td>
-          <td id="cell10">Cell 10</td>
-          <td id="cell11">Cell 11</td>
-          <td id="cell12">Cell 12</td>
+          <td id="cell9" height="50" width="70"></td>
+          <td id="cell10" height="50" width="70"></td>
+          <td id="cell11" height="50" width="70"></td>
+          <td id="cell12" height="50" width="70"></td>
         </tr>
         <tr>
-          <td id="cell13">Cell 13</td>
-          <td id="cell14">Cell 14</td>
-          <td id="cell15">Cell 15</td>
-          <td id="cell16">Cell 16</td>
+          <td id="cell13" height="50" width="70"></td>
+          <td id="cell14" height="50" width="70"></td>
+          <td id="cell15" height="50" width="70"></td>
+          <td id="cell16" height="50" width="70"></td>
         </tr>
       </table>
       
